--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.0.0",
     "million": "^2.6.4",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0"
