--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.7",
     "clsx": "^2.0.0",
     "million": "^2.6.4",
+    "mongodb": "^6.3.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
