--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.7",
+    "@reduxjs/toolkit": "^1.9.7",
     "clsx": "^2.0.0",
     "million": "^2.6.4",
     "mongodb": "^6.3.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "next-client-cookies": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0"
+    "react-redux": "^8.1.3",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.1",
-    "@types/react": "^18.2.39",
+    "@types/node": "^20.10.2",
+    "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "eslint-config-next": "14.0.3",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   }
