--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.7",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/lodash": "^4.14.202",
     "clsx": "^2.0.0",
+    "lodash": "^4.17.21",
     "million": "^2.6.4",
     "mongodb": "^6.3.0",
     "next": "14.0.3",
