--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^2.0.7",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/lodash": "^4.14.202",
+    "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.0.0",
     "lodash": "^4.17.21",
     "million": "^2.6.4",
@@ -21,6 +22,7 @@
     "next-client-cookies": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.4.1",
     "react-redux": "^8.1.3",
     "tailwind-merge": "^2.1.0"
   },
