--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "lodash": "^4.17.21",
     "million": "^2.6.4",
     "mongodb": "^6.3.0",
-    "next": "14.0.3",
+    "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-client-cookies": "^1.1.0",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-redux": "^8.1.3",
